@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020141228"
-#define public MagickPackageReleaseDate "snapshot-20141228"
+#define public MagickPackageVersionAddendum ".020141229"
+#define public MagickPackageReleaseDate "snapshot-20141229"
